fix spacing, disabled styling

--- a/src/components/common/ContactForm/ContactForm.module.scss
+++ b/src/components/common/ContactForm/ContactForm.module.scss
@@ -42,5 +42,5 @@
 }
 
 .recaptcha {
-  margin: 0 auto $space;
+  margin: $space auto;
 }
